WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281118
Release assert in TimerBase::TimerBase() via [WebView(WebPrivate) _setLoadResourcesSerially:]
https://bugs.webkit.org/show_bug.cgi?id=281118
Summary
Release assert in TimerBase::TimerBase() via [WebView(WebPrivate) _setLoadRes...
Ryosuke Niwa
Reported
2024-10-08 22:11:34 PDT
1 WebCore 0x00000001b3aa0f10 WebCore::TimerBase::TimerBase() + 220 2 WebKitLegacy 0x000000021f12a450 WebResourceLoadScheduler::WebResourceLoadScheduler() + 116 3 WebKitLegacy 0x000000021f21b6a4 WebPlatformStrategies::createLoaderStrategy() + 32 4 WebKitLegacy 0x000000021f1bf0e8 +[WebView(WebPrivate) _setLoadResourcesSerially:] + 228
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2024-10-08 22:11:51 PDT
<
rdar://134348015
>
Ryosuke Niwa
Comment 2
2024-10-08 22:14:51 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34891
EWS
Comment 3
2024-10-08 23:15:02 PDT
Committed
284871@main
(47ca5ab09254): <
https://commits.webkit.org/284871@main
> Reviewed commits have been landed. Closing PR #34891 and removing active labels.
EWS
Comment 4
2024-10-10 13:58:51 PDT
Committed
283286.241@safari-7620-branch
(0ffa06a24f85): <
https://commits.webkit.org/283286.241@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2002 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug