Release assert in TimerBase::TimerBase() via [WebView(WebPrivate) _setLoadResourcesSerially:] https://bugs.webkit.org/show_bug.cgi?id=281118 rdar://134348015

Reviewed by Wenson Hsieh.

The assertion failure was caused by _setLoadResourcesSerially entering WebCore without holding web thread lock.
Fixed the bug by holding the lock.

* Source/WebKitLegacy/mac/WebView/WebView.mm:
(+[WebView _setLoadResourcesSerially:]):

Canonical link: https://commits.webkit.org/284871@main